fixed button text overflow problem

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -11,13 +11,13 @@
   background-color: #FEFCFB;
   border: 2px solid #034078;
   color: #034078;
-  border-radius: 50px;
+  border-radius: 10px;
   font-size: 16px;
 }
 
 .btn-carbon-primary:hover {
   color: #034078;
-  font-weight: bolder;
+  text-decoration: underline;
 }
 
 .btn-carbon-lg {
